# the-great-wall

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  entrypoint.sh
config/: minetest.conf
games/the_great_wall/: game.conf
games/the_great_wall/mods/default/: init.lua
games/the_great_wall/mods/fmod/: init.lua  mod.conf
games/the_great_wall/mods/futil/: init.lua  mod.conf
games/the_great_wall/mods/lumia_chargen/: apply.lua  formspec.lua  init.lua  mod.conf  races.lua  signs.lua
games/the_great_wall/mods/lumia_music/: init.lua  mod.conf  state.lua  tracks.lua  triggers.lua
games/the_great_wall/mods/preprod_setup/: init.lua  mod.conf
games/the_great_wall/mods/tgw_capture/: init.lua  mod.conf
games/the_great_wall/mods/tgw_combat/: init.lua  mod.conf  sprites.json
games/the_great_wall/mods/tgw_core/: init.lua  mod.conf
games/the_great_wall/mods/tgw_economy/: init.lua  mod.conf
games/the_great_wall/mods/tgw_hof/: init.lua  mod.conf
games/the_great_wall/mods/tgw_house/: init.lua  mod.conf
games/the_great_wall/mods/tgw_hud/: init.lua  mod.conf
games/the_great_wall/mods/tgw_invader/: init.lua  mod.conf
games/the_great_wall/mods/tgw_map/: init.lua  mod.conf
games/the_great_wall/mods/tgw_pipeline/: init.lua  mod.conf
tools/sprite_gen/: .coverage  README.md  SCHEMA.md  generate_guardians.py  pyproject.toml
tools/sprite_gen/sprite_gen/: __init__.py  __main__.py  atlas.py  grid.py  presets.py  rigs.py  validate.py
tools/sprite_gen/tests/: test_atlas.py  test_pipeline.py
(+12 files in other folders)
