[project]
name = "sprite_gen"
version = "0.1.0"
description = "16x16 grid-to-PNG sprite generator for Lumia/Luanti mods"
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0"]

[project.scripts]
sprite_gen = "sprite_gen.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sprite_gen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
